-- 2024.07.24 - V4.4.1

- feat: ranks config self-repair added to prevent issues with them
- fix: death statistics counter from bots even if disabled
- fix: remove unused code part
- fix: disconnect message not shown even if enabled
- chore: update README.md to use new team standards and fix broken links

-- 2024.06.03 - V4.4.0

- feat: New config to decide whther or not to give points for playtime for AFK players
- fix: Playtime points not counted properly for Counter-Terrorists
- chore: Fixed CHANGELOG dates

-- 2024.06.03 - V4.3.4

- fix: Country tag performance issues
- fix: Disconnect announcement not shown
- fix: Fixed the resetrank problem
- fix: Color replacing problems with DarkRed or DarkBlue and so

-- 2024.05.18 - V4.3.3

- fix: Threading problems
- fix: All player load was full bad and caused too much resource usage on map changes

-- 2024.05.18 - V4.3.2

- fix: Connect message shown even if its disabled
- fix: Placeholder replaced error logs
- fix: Player top placement is not fetched on join
- fix: Load all player cache is running the query two times

-- 2024.05.17 - V4.3.1

- fix: Connect/Disconnect message parentheses

-- 2024.05.16 - V4.3.0

- feat: Added connect and disconnect messages with variables (if you need some other variable let me know)
- fix: Add current points to round summary
- fix: Error log on round start because of team balance
- fix: Enumeration problems on getting k4players
- fix: AutoTeamBalance error logs
- remove: Removed round summary translations. Now the regular gain/loss is used instead
- remove: CallbackAnonymizer removed since that bug was fixed in CSS
- remove: Debug logs on fetch

-- 2024.05.11 - V4.2.1

- fix: Toplist placements is now fetched every 5 minutes instead of the mistake 5 seconds
- fix: Do not try to fetch placements if noone is online to do for
- fix: Removed a duplicated save
- fix: Removed a debug message leftover

-- 2024.05.09 - V4.2.0
