@@ -4,6 +4,7 @@
 - fix: death statistics counter from bots even if disabled
 - fix: remove unused code part
 - fix: disconnect message not shown even if enabled
+- fix: team-balance freeze/crash the server
 - chore: update README.md to use new team standards and fix broken links
 
 -- 2024.06.03 - V4.4.0
